# 11SimpleSearchEngine

./: CMakeLists.txt  README.md
Data/: index0.txt  index10.txt  index100.txt  index101.txt  index102.txt  index103.txt  index104.txt  index105.txt  index106.txt  index107.txt  index108.txt  index109.txt  index11.txt  index110.txt  index111.txt  index112.txt  index113.txt  index114.txt  index115.txt  index116.txt  index117.txt  index118.txt  index119.txt  index12.txt  index120.txt  index121.txt  index122.txt  index123.txt  index124.txt  index125.txt  index126.txt  index127.txt  index128.txt  index129.txt  index13.txt  index130.txt  index131.txt  index132.txt  index133.txt  index134.txt  (+456 more)
indexation/: CMakeLists.txt  Index.cpp  Index.hpp  utils.cpp  utils.hpp
lib/: engine.hpp
search/: CMakeLists.txt  engine.cpp  engine.hpp
tests/: CMakeLists.txt  ts_tests.cpp
